--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@astrojs/check": "^0.8.2",
     "astro": "^4.12.2",
+    "astro-compress": "^2.3.0",
     "sharp": "^0.33.4",
     "typescript": "^5.5.4"
-  }
+  },
+  "packageManager": "pnpm@9.6.0+sha256.dae0f7e822c56b20979bb5965e3b73b8bdabb6b8b8ef121da6d857508599ca35"
 }
