--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.8.2",
+    "@fontsource-variable/roboto-condensed": "^5.0.3",
     "astro": "^4.12.2",
     "astro-better-image-service": "^2.0.13",
     "sharp": "^0.33.4",
